# pico-play

./: .gitignore  README.md
blink/: CMakeLists.txt  README.md  blink.c  blink.h  blinker.c
heartbeat/: Makefile  README.md  boot.S  cortex-m.h  leds.c  nvic.c  nvic.h  pico-gpio.h  pico-uart.c  pico-uart.h  pico.h  pico.ldscript  play.c  systick.c  to-pico.sh  vectors.c
heartbeat/calc/: Makefile  brcalc.c
simpleuart/: Makefile  README.txt  boot.S  notmain.c  pico.ldscript
